# lvgl-8.4-qt-lcd-Simulater

./: CMakeLists.txt  build.sh  readme.md
linux/: inputDeviceParser.h  keyboardReader.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.cpp  lv_port_indev.h  main.cpp  readme.md
lvgl/: CMakeLists.txt  lv_conf.h
ui/: page_main.cpp  page_main.h
win-qt/: LcdSimulater.pro  lcdwidget.cpp  lcdwidget.h  lv_port_disp.cpp  lv_port_disp.h  lv_port_indev.cpp  widget.cpp  widget.h
